AIAI-363 Governance Dashboard - Adapt the history table with new structure changes - Added settings folders to gitignore file